Adding V12 Crawler based on JOX (#29)
* Adding V12 Crawler based on JOX
* Adding a JMH result